--- a/index.html
+++ b/index.html
@@ -2,12 +2,15 @@
   <head>
     <style>
       h1 {
-        color: red;
+        color: blue;
+        font-size: 30px;
       }
       p {
-        color: gray;
+        color: green;
+        font-family: Arial, sans-serif;
       }
     </style>
+    
   </head>
   <body>
     <h1>Welcome to my page!</h1>
